Bug 348360 - Creating Event from message, end time dropdown itemslist is truncated at around initial start time
Summary: Creating Event from message, end time dropdown itemslist is truncated at arou...
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: message list (other bugs)
Version First Reported In: 4.14.2
Platform: Debian testing Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-05-28 10:18 UTC by Sander van Grieken
Modified: 2015-05-28 21:40 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.14.9
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Sander van Grieken 2015-05-28 10:18:33 UTC
The list of end times is a convenience list that contains rounded times in 15 minute intervals.
The start time contains a list that covers the entire 24-hour period. The end time starts at 0:00, but stops around the current time when the 'dialog' was opened. So e.g. when you press Ctrl-E at 13:05, the last 2 items in the end-time list are 13:00 and 13:05 

Reproducible: Always

Steps to Reproduce:
1. Select message
2. rightclick, click Create Event...
3. observe end time dropdown itemlist

Actual Results:  
end time dropdown list does not contain convenience items for the full 24 hour range

Expected Results:  
end time dropdown list does contain convenience items for the full 24 hour range
Comment 1 Laurent Montel 2015-05-28 11:17:27 UTC
Git commit 8cab399991db61a008c952f275c9280d727c3f51 by Montel Laurent.
Committed on 28/05/2015 at 11:16.
Pushed by mlaurent into branch 'KDE/4.14'.

Fix Bug 348360 - Creating Event from message, end time dropdown itemslist is truncated at around initial start time

FIXED-IN: 4.14.9

M  +1    -1    messageviewer/widgets/eventdatetimewidget.cpp

http://commits.kde.org/kdepim/8cab399991db61a008c952f275c9280d727c3f51
Comment 2 Sander van Grieken 2015-05-28 11:29:27 UTC
that's fast :)

however, there's still an issue with limiting the items in the dropdown, e.g. when selecting another day, the full list op items should again be available
Comment 3 Laurent Montel 2015-05-28 12:08:20 UTC
Ah yep indeed. Ok I will fix it soon.
Comment 4 Laurent Montel 2015-05-28 21:40:47 UTC
Git commit b1682e1088d2db5758fe6b06f37c2c459421f3b5 by Montel Laurent.
Committed on 28/05/2015 at 21:40.
Pushed by mlaurent into branch 'KDE/4.14'.

Fix Bug 348360 - Creating Event from message, end time dropdown itemslist is truncated at around initial start time

FIXED-IN: 4.14.9

M  +16   -0    messageviewer/widgets/eventedit.cpp
M  +2    -2    messageviewer/widgets/eventedit.h

http://commits.kde.org/kdepim/b1682e1088d2db5758fe6b06f37c2c459421f3b5