Fix Bug 348360 - Creating Event from message, end time dropdown itemslist is truncated at around initial start time

FIXED-IN: 4.14.9
BUG: 348360