messageviewer/widgets/eventedit.h
@@ -58,8 +58,8 @@ private Q_SLOTS:
     void slotCollectionChanged(int);
     void slotOpenEditor();
     void slotStartDateTimeChanged(const KDateTime &newDateTime);
-    void slotUpdateButtons(const QString &subject);
-
+    void slotUpdateButtons(const QString &subject);    
+    void slotEndDateTimeChanged(const KDateTime &newDateTime);
 Q_SIGNALS:
     void createEvent(const KCalCore::Event::Ptr &event, const Akonadi::Collection &collection);
     void collectionChanged(const Akonadi::Collection &col);
